Upgrade java to 17 (#318)
* Upgrade java to 17

* Upgrade java to 17

* Upgrade java to 17

* Upgrade java to 17

* Revert "Upgrade java to 17"

This reverts commit c36ef70d473500c0b6ba351dcd7c3571f7970b57.

* Upgrade java to 17